--- a/WebContent/plugins/easyui/themes/zone/easyui.css
+++ b/WebContent/plugins/easyui/themes/zone/easyui.css
@@ -14,6 +14,23 @@ a{text-decoration: none;color: #3c8dbc}
 .table-form td{
 	padding: 5px
 }
+::-webkit-scrollbar { /*滚动条整体样式*/
+	width: 10px; /*高宽分别对应横竖滚动条的尺寸*/
+	height: 10px;
+}
+
+::-webkit-scrollbar-thumb { /*滚动条里面小方块*/
+	border-radius: 10px;
+	-webkit-box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2);
+	background: #95B8E7;
+}
+
+::-webkit-scrollbar-track { /*滚动条里面轨道*/
+	-webkit-box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2);
+	border-radius: 10px;
+	background: #EDEDED;
+}
+/**以下是easyui*/
 .panel {
   overflow: hidden;
   text-align: left;
